<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:text="@string/MiningFragmentName"
        android:layout_marginTop="10dp"
        android:id="@+id/Fragment3Text"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Fragment3Text"
        android:layout_marginTop="10dp"
        android:id="@+id/btn1fragment3"
        android:text="@string/GoToGatheringName"/>

    <Button
        android:id="@+id/btn2fragment3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Fragment3Text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:text="@string/GoToResearchName"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn2fragment3"
        android:layout_marginTop="10dp"
        android:id="@+id/btn3fragment3"
        android:text="@string/GoToMiningName"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn2fragment3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_alignParentEnd="true"
        android:id="@+id/btn4fragment3"
        android:text="@string/GoToResourcesName"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn4fragment3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/gatherrockbtn"
        android:text="Mine Stone"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gatherrockbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/gathercopperbtn"
        android:text="Mine Copper"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gathercopperbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/gatherironbtn"
        android:text="Mine Iron"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gatherironbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/gatherdiamondbtn"
        android:text="Mine Diamonds"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gatherdiamondbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/gathertitaniumbtn"
        android:text="Mine Titanium"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/gatherrockbtn"
        android:layout_alignBaseline="@+id/gatherrockbtn"
        android:layout_marginStart="5dp"
        android:id="@+id/MineRockLabel"
        android:text="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/gathercopperbtn"
        android:layout_alignBaseline="@+id/gathercopperbtn"
        android:layout_marginStart="5dp"
        android:id="@+id/MineCopperLabel"
        android:text="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/gatherironbtn"
        android:layout_alignBaseline="@+id/gatherironbtn"
        android:layout_marginStart="5dp"
        android:id="@+id/MineIronLabel"
        android:text="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/gatherdiamondbtn"
        android:layout_alignBaseline="@+id/gatherdiamondbtn"
        android:layout_marginStart="5dp"
        android:id="@+id/MineDiamondsLabel"
        android:text="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/gathertitaniumbtn"
        android:layout_alignBaseline="@+id/gathertitaniumbtn"
        android:layout_marginStart="5dp"
        android:id="@+id/MineTitaniumLabel"
        android:text="0"/>



</RelativeLayout>